# pro_ai

./: .gitignore  Makefile  README.md
instrument/src/: AssociativeDependenceBreak.cpp  CMakeLists.txt  CallableHandler.h  CallableHandler.tcc  ControlDependencePlacer.cpp  ControlDependencePlacer.h  CppExceptionSupport.cpp  CriticalPath.cpp  DominatorInternals.h  DynamicMemoryHandler.cpp  DynamicMemoryHandler.h  EliminateSingleInputPHIs.cpp  FormattableToString.cpp  FormattableToString.h  FuncAnalyses.cpp  FuncAnalyses.h  FuncRegion.cpp  FuncRegion.h  FunctionArgsHandler.cpp  FunctionArgsHandler.h  FunctionUniquify.cpp  GetTerminator.cpp  GetTerminator.h  GlobalTableAllocator.cpp  GlobalTableAllocator.h  HashRegionIdGenerator.cpp  HashRegionIdGenerator.h  InstrumentationCall.cpp  InstrumentationCall.h  InstrumentedCall.h  InstrumentedCall.tcc  KremlibDump.cpp  LLVMTypes.cpp  LLVMTypes.h  LoadHandler.cpp  LoadHandler.h  LocalTableHandler.cpp  LocalTableHandler.h  LoopBodyRegion.cpp  LoopBodyRegion.h  (+33 more)
instrument/src/AI/: ArithmeticIntensity.h  CMakeLists.txt  Makefile  arithmetic_intensity.cpp
instrument/src/analysis/: ControlDependence.cpp  ControlDependence.h  InductionVariables.cpp  InductionVariables.h  ReductionVars.cpp  ReductionVars.h  WorkAnalysis.cpp  WorkAnalysis.h
instrument/src/analysis/timestamp/: ConstantHandler.cpp  ConstantHandler.h  ConstantWorkOpHandler.cpp  ConstantWorkOpHandler.h  (+15 more)
instrument/src/ids/: CallSiteIdGenerator.h  CallSiteIdGenerator.tcc  InstIds.cpp  InstIds.h  NameToUuid.cpp  NameToUuid.h  UuidToIntAdapter.h  UuidToIntAdapter.tcc
(+185 files in other folders)
