#add_library(KremlinInstrument MODULE
add_llvm_loadable_module(KremlinInstrument
	AssociativeDependenceBreak.cpp
	ControlDependencePlacer.cpp
	CppExceptionSupport.cpp
	CriticalPath.cpp
	DynamicMemoryHandler.cpp
	EliminateSingleInputPHIs.cpp
	FormattableToString.cpp
	FuncAnalyses.cpp
	FuncRegion.cpp
	FunctionArgsHandler.cpp
	FunctionUniquify.cpp
	GetTerminator.cpp
	GlobalTableAllocator.cpp
	HashRegionIdGenerator.cpp
	InstrumentationCall.cpp
	KremlibDump.cpp
	LLVMTypes.cpp
	LoadHandler.cpp
	LocalTableHandler.cpp
	LoopBodyRegion.cpp
	LoopRegion.cpp
	MemoryInstHelper.cpp
	OpCosts.cpp
	PassLog.cpp
	PhiHandler.cpp
	Placer.cpp
	Region.cpp
	RegionInstrument.cpp
	RemapIDs.cpp
	RenameMain.cpp
	ReturnHandler.cpp
	ReturnsRealValue.cpp
	SplitBBAtFuncCall.cpp
	StoreInstHandler.cpp
	TimestampPlacer.cpp
	ids/InstIds.cpp
	ids/NameToUuid.cpp
	analysis/ControlDependence.cpp
	analysis/InductionVariables.cpp
	analysis/ReductionVars.cpp
	analysis/WorkAnalysis.cpp
	analysis/timestamp/ConstantHandler.cpp
	analysis/timestamp/ConstantWorkOpHandler.cpp
	analysis/timestamp/KInstructionToLogFunctionConverter.cpp
	analysis/timestamp/LiveInHandler.cpp
	analysis/timestamp/TimestampAnalysis.cpp
	analysis/timestamp/TimestampCandidate.cpp
	analysis/timestamp/Timestamp.cpp
	analysis/timestamp/UnknownOpCodeException.cpp
	analysis/timestamp/ValueClassifier.cpp
	PostDominanceFrontier.cpp
)
